--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
+
+
+body
+{
+  background: url(https://wallpaperaccess.com/full/1155007.jpg) center center no-repeat;
+  background-size: cover;
+  min-height: 100vh;
+}
+.pointer
+{
+  cursor: pointer;
+}
